--- a/Cropper/Content/Site.css
+++ b/Cropper/Content/Site.css
@@ -22,3 +22,64 @@ select,
 textarea {
     max-width: 280px;
 }
+
+body:after {
+    opacity: 0;
+    content: "";
+}
+
+body.open:after {
+    content: "";
+    background-color: #000000;
+    opacity: 1;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: fixed;
+    transition: all 0.3s 0.3s;
+}
+
+.containerCrop {
+    display: none;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 100;
+    top: 0;
+    left: 50%;
+    background-color: #ffffff;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    transform: translateX(-50%);
+}
+
+.bootstrap-filestyle input {
+    width: 100%;
+    max-width: 100%;
+}
+
+.hideElement {
+    display: none;
+}
+
+.without-symbol {
+    list-style-type: none;
+}
+
+
+
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+.listUploadImage {
+    width: 120px;
+    min-height: 120px;
+    max-height: auto;
+    float: left;
+    margin: 3px;
+    padding: 3px;
+}
