--- a/Cropper/Views/Home/Index.cshtml
+++ b/Cropper/Views/Home/Index.cshtml
@@ -1,31 +1,34 @@
-﻿@{
+﻿@using System.Configuration
+@{
+    var path = Url.Content(ConfigurationManager.AppSettings["ImagePath"]);
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+@section styles {
+    <link href="~/Content/cropper/cropper.min.css" rel="stylesheet" />
+    <link href="~/Content/cropper/main.css" rel="stylesheet" />
+    <style>
+        .plusupload {
+            cursor: pointer;
+        }
+    </style>
+}
+
+<h4>Download image</h4>
+<div id="fileUploadContainer">
+    <input type="file" name="img-file" id="img-file" class="hide" />
+</div>
+<div class="row" style="display: flex; flex-direction: column;">
+    <div class="col-lg-1 col-md-2 plusupload" id="imageContainerPlus" data-container="1">
+        <div class="thumbnail">
+            <img src="@(path+"_defaultImage.png")" style="width:100px" class="uploadimage img-responsive" />
+        </div>
+    </div>
+    <br />
+    <div id="listUploadImage" class="listUploadImage without-symbol"></div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+@section scripts {
+    <script src="~/Scripts/cropper/cropper.min.js"></script>
+    <script src="~/Scripts/cropper/work-cropper.js"></script>
+}
